# buscaMinas

buscaMinas/: CMakeLists.txt  main.cpp
